Add ability to change language
 - fix bug on russian yml file where it was pointing to english translation
 - Add dropdown to select language
 - add route to change locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,10 @@ en:
       submit: "Submit"
   menu:
     new_article: "Add an article"
+    languages:
+      lang: "Language"
+      ru: "Russian"
+      en: "English"
   articles:
     index:
       count:
